# FRL-playground

./: .gitignore  Makefile  README.md  frl.yml  frl_x86.yml  mlagents.yml  ogbench.yml  pyproject.toml
code/: Makefile  behavioral_cloning.py  cartpole.py  diffusion.ipynb  eval.py  fm_bc.py  frl.yml  lunarlander.py  sb3_example.py  smalldiffusion.ipynb
code/conf/: environment.py
code/experiments/lunarlander/: record.sh  train.sh
code/notebooks/: 2d_flow_matching.ipynb  baseline_bc.ipynb  behavioral_cloning.ipynb  diffusion_policy_state_pusht_demo.ipynb  fm_bc.ipynb  lunarlander.ipynb  smalldiffusion.ipynb
code/pipelines/: baseline_bc.py  behavioral_cloning.py  collect_dataset.py  fm_bc.py
code/utils/: loggers.py
setup/: environment_arm.yml  environment_x86.yml
src/: Makefile  frl_arm.yml  run.py
src/checkpoints/: ConditionalTemporalCNN_h100_e100_k5.pth  TemporalCNN_h100_e10.pth  TemporalCNN_h100_e100.pth
src/experiments/: fm.sh  train.sh
src/experiments/fm_generation/: args.py  run.py
src/models/: activation_fns.py  backbone.py  cnn.py  mlp.py
src/notebooks/: baseline_bc.ipynb  conditional_flow_matching.ipynb  fm_bc.ipynb
src/pipelines/: baseline_bc.py  fm_bc.py
src/pipelines/lunarlander/: baseline_bc.py  collect_dataset.py  fm_bc.py  preprocessing.py
src/utils/: args.py  loggers.py
