[project]
name = "fm-playground"
version = "0.1.0"
description = "experimenting with CNF and rectified flow."
authors = [
    {name = "frankcholula",email = "lu.phrank@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
