[project]
name = "frl-playground"
version = "0.1.0"
description = "experimenting with CNF and rectified flow."
authors = [
    {name = "frankcholula",email = "lu.phrank@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "smalldiffusion (>=0.4.3,<0.5.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "flow-matching (>=1.0.10,<2.0.0)",
    "gymnasium[classic-control] (>=1.1.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [
    { include = "code"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
